deps/v8/test/message/fail/modules-duplicate-export4.out
*%(basename)s:9: SyntaxError: Duplicate export of 'x'
export {y as z, y as x, y};
                ^^^^^^
SyntaxError: Duplicate export of 'x'

